src/FinancialForce Accounting/objects/ReportingBalance__c.object
<CustomObject>
    <customHelpPage>codahelpreportingbalance</customHelpPage>
    <description>Extract of the Budget and Balance information used for reporting purposes.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdjustOperatingActivities__c</fullName>
        <label>Reclassify Profits</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BalanceUpdateTimestamp__c</fullName>
        <label>Balance Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetAndBalance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget and Balance</label>
        <referenceTo>codaBudget__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CashFlowCategory__c</fullName>
        <label>Cash Flow Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashFlowLineSummary__c</fullName>
        <label>Cash Flow Line Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DualValue__c</fullName>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HashCode__c</fullName>
        <description>Cash Flow Exception Hash Code</description>
        <label>Cash Flow Exception Hash Code</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeValue__c</fullName>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IntersectDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intersect Definition</label>
        <referenceTo>codaIntersectDefinition__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Reporting Balances Local GLA</relationshipLabel>
        <relationshipName>ReportingBalancesLocalGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberOfRelatedTransactionLineItems__c</fullName>
        <label>Number of Related Transaction Line Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Reporting Balances (Company)</relationshipLabel>
        <relationshipName>ReportingBalances2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodNumber__c</fullName>
        <formula>IF(ISNUMBER(Period__r.PeriodNumber__c),VALUE(Period__r.PeriodNumber__c),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportingBalanceHashCode__c</fullName>
        <externalId>true</externalId>
        <label>Reporting Balance Hash Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subanalysis__c</fullName>
        <formula>BankAccount__r.AccountName__c + Product__r.Name + TaxCode__r.Name + Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-analysis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Size</fullName>
                </value>
                <value>
                    <fullName>HeadCountActual</fullName>
                </value>
                <value>
                    <fullName>HeadCountBudget</fullName>
                </value>
                <value>
                    <fullName>HeadCountForecast</fullName>
                </value>
                <value>
                    <fullName>HeadCountPlan</fullName>
                </value>
                <value>
                    <fullName>VolumeActual</fullName>
                </value>
                <value>
                    <fullName>VolumeBudget</fullName>
                </value>
                <value>
                    <fullName>VolumeForecast</fullName>
                </value>
                <value>
                    <fullName>VolumePlan</fullName>
                </value>
                <value>
                    <fullName>Shares</fullName>
                </value>
                <value>
                    <fullName>SharesInIssue</fullName>
                </value>
                <value>
                    <fullName>SharesOutstanding</fullName>
                </value>
                <value>
                    <fullName>SharesPrice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YearNumber__c</fullName>
        <formula>IF(ISNUMBER(Period__r.YearName__r.Name),VALUE(Period__r.YearName__r.Name),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Reporting Balance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Period__c</columns>
        <columns>Account__c</columns>
        <columns>BankAccount__c</columns>
        <columns>Product__c</columns>
        <columns>TaxCode__c</columns>
        <columns>Dimension1__c</columns>
        <columns>Dimension2__c</columns>
        <columns>Dimension3__c</columns>
        <columns>Dimension4__c</columns>
        <columns>HomeValue__c</columns>
        <columns>DualValue__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reporting Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>